Work on "get subscriptions"
