# lib/api/controllers/state.js
@@ -418,4 +418,35 @@ module.exports = {
             }
         });
     },
+
+    getStatesSubscribes: function (req, res) {
+        commonLib.checkPermissions(req._adapter, req._user, [{type: 'state', operation: 'read'}], async err => {
+            if (err) {
+                res.status(403).json({error: err});
+            } else {
+                let url = req.body.url;
+                if ((req.query && req.query.method === 'polling') || (req.body && req.body.method === 'polling')) {
+                    url = req.headers['x-forwarded-for'] || req.socket.remoteAddress;
+                    if (req.query.sid) {
+                        url += '_' + req.query.sid;
+                    }
+                }
+
+                if (!url) {
+                    res.status(422).json({error: 'url not provided', expectedBody: {url: 'http://ipaddress:9000/hook/'}});
+                    return;
+                }
+
+                try {
+                    const result = await req._swaggerObject.getSubscribes(url, req.body.pattern, 'state', req._user, {
+                        method: req.body.method,
+                    });
+                    res.json({states: result});
+
+                } catch (error) {
+                    res.status(500).json({error, pattern: req.body.pattern, url: req.body.url});
+                }
+            }
+        });
+    },
 };
